# pmpp-playground

./: CMakeLists.txt  README.md  main.cu
chapters/chapter-01/: CMakeLists.txt  vecadd_cpu.c  vecadd_cuda.cu
chapters/chapter-02/: CMakeLists.txt  image_transform.cu  matrix_multiplication.cu  rgb_to_gray.cu
common/: CMakeLists.txt
common/include/: cuda_check.h  cuda_utils.cuh  timer.h  utils.h
common/src/: timer.c  utils.c
